pref(website): 快速开始的首页以及更多字体

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -27,6 +27,11 @@
     src: url("/static/fonts/SmileySans-Oblique.otf.woff2");
 }
 
+@font-face {
+    font-family: "ZCOOLKuaiLe-Regular";
+    src: url("/static/fonts/ZCOOLKuaiLe-Regular.ttf") format('truetype');
+}
+
 body {
     font-family: 'LXGWNeoXiHeiScreen', serif;
 }
@@ -37,6 +42,10 @@ h1,h2,h3,h4 {
 
 header,h1,h2 {
     text-align: center;
+}
+
+.theme-admonition {
+    font-family: 'ZCOOLKuaiLe-Regular', 'LXGWNeoXiHeiScreen', serif;
 }
 
 a:not([class])::before {
