--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -1,3 +1,4 @@
+/*noinspection CssUnknownTarget*/
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css");
 
 /**
@@ -7,26 +8,44 @@
  */
 
 /* You can override the default Infima variables here. */
+
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: "JetBrains Mono";
     src: url("/fonts/JetBrainsMono-SemiBold.woff2");
 }
 
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: "iconfont";
-    src: url("/fonts/iconfont.ttf?t=1680524259075") format('truetype');
+    src:
+            url("/fonts/icons/iconfont.woff2") format('woff'),
+            url("/fonts/icons/iconfont.woff") format('woff'),
+            url("/fonts/icons/iconfont.ttf") format('truetype');
 }
 
+/*noinspection CssUnknownTarget*/
+@font-face {
+    font-family: "tab-iconfont-link";
+    src:
+            url("/fonts/tab/iconfont.woff2") format('woff'),
+            url("/fonts/tab/iconfont.woff") format('woff'),
+            url("/fonts/tab/iconfont.ttf") format('truetype');
+}
+
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: "LXGWNeoXiHeiScreen";
     src: url("/fonts/LXGWNeoXiHeiScreen.ttf");
 }
 
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: "SmileySans-Oblique";
     src: url("/fonts/SmileySans-Oblique.otf.woff2");
 }
 
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: "ZCOOLKuaiLe-Regular";
     src: url("/fonts/ZCOOLKuaiLe-Regular.ttf") format('truetype');
@@ -36,11 +55,11 @@ body {
     font-family: 'LXGWNeoXiHeiScreen', serif;
 }
 
-h1,h2,h3,h4 {
+h1, h2, h3, h4 {
     font-family: 'SmileySans-Oblique', serif;
 }
 
-header,h1,h2 {
+header, h1, h2 {
     text-align: center;
 }
 
@@ -48,14 +67,76 @@ header,h1,h2 {
     font-family: 'ZCOOLKuaiLe-Regular', 'LXGWNeoXiHeiScreen', serif;
 }
 
+/*content: '\e600';*/
+/*content: '\e685';*/
+
 a:not([class])::before {
-    content: '\f010b';
+    /*content: '\f010b';*/
+    content: '\e600';
     font-family: "iconfont", serif !important;
     font-size: 0.75em;
     font-style: normal;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+
+/*region TabItems icon*/
+/*TabItem Kotlin*/
+li[role='tab'][data-value^='Kotlin']::before {
+    /* &#xe67e; */
+    content: '\e67e';
+    /*content: url("/svg/Kotlin-icon.svg");*/
+    font-family: "tab-iconfont-link", serif !important;
+    font-style: normal;
+    margin-right: 2px;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+/*TabItem Kts*/
+li[role='tab'][data-value^='Kts']::before {
+    /* kts &#xe63c; */
+    content: '\e63c';
+    font-family: "tab-iconfont-link", serif !important;
+    font-style: normal;
+    margin-right: 2px;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+/*TabItem Java*/
+li[role='tab'][data-value^='Java']::before {
+    /* &#xe639; */
+    content: '\e639';
+    font-family: "tab-iconfont-link", serif !important;
+    font-style: normal;
+    margin-right: 2px;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+/*TabItem Gradle*/
+li[role='tab'][data-value^='Gradle']::before {
+    /* &#xe65a; */
+    content: '\e65a';
+    font-family: "tab-iconfont-link", serif !important;
+    font-style: normal;
+    margin-right: 2px;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+/*TabItem Maven*/
+li[role='tab'][data-value^='Maven']::before {
+    /* maven &#xe605; */
+    content: '\e605';
+    font-family: "tab-iconfont-link", serif !important;
+    font-style: normal;
+    margin-right: 2px;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+/*endregion*/
+
 
 code:not([class]) {
     margin-left: 3px;
